# HPC

include/: MyUtils.h
projectCUDA/: CMakeLists.txt  SumArrays.cu  helloWorld.cu
projectOpenmp/: CMakeLists.txt  main.cpp
